fix some things

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 <div class="container">
 <footer class="">
-<p class="">Miguel Colmenarez |2022 &copy;| <a href="https://github.com/eiosoy/proyectos" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github icono"></i></a> <!--nombre de pagina que tambien va arriba--></p>
+<p class="">Miguel Colmenarez |2022 &copy;| <a href="https://github.com/eiosoy" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github icono"></i></a> <!--nombre de pagina que tambien va arriba--></p>
 </footer>
 </div>
 
