se envia el formulario

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     
 
     <div class="d-grid gap-2 d-md-block">
-      <button class="btn btn-dark" type="button" id="button">Send</button>
+      <button class="btn btn-dark" type="button" id="button" name="button">Send</button>
     </div>
 </form>
 </div>
