--- a/index.html
+++ b/index.html
@@ -90,13 +90,17 @@
 
 <h2>Projects</h2>
 <div id="projects">
+  <div>
+    <p>Here are some projects that i did but no one contains JavaScript code</p>
+    <p>You can check my resume <span></span> <a class="resume" href="https://docs.google.com/document/d/1jKU51x-4Zenh65y6xZ1ZMCTIO1ffLIF1/edit?usp=sharing&ouid=103953328832651350323&rtpof=true&sd=true">Here</a></p> 
+  </div>
   <section class="proyectos py-4">
     <div class="card-group">
       <div class="card">
         <img src="/images/bienes-raices.png" class="card-img-top" alt="Bienes raices">
         <div class="card-body">
         <h5 class="card-title">Project 1</h5>
-        <p class="card-text">This is a page about Buying and selling real estate with a mobile first design, this don't contains JavaScript</p>
+        <p class="card-text">This is a page about Buying and selling real estate with a mobile first design, this does not contain JavaScript</p>
         <a target="_blank" href="https://stellular-cannoli-c58adb.netlify.app/" class="btn btn-dark" rel="noopener noreferrer">See Project</a>
       </div>
       </div>
@@ -104,7 +108,7 @@
       <img src="/images/Blog-cafe.png" class="card-img-top" alt="Blog de café">
       <div class="card-body">
         <h5 class="card-title">Project 2</h5>
-          <p class="card-text">This one is a Blog of coffe with a mobile first design too, this also doesn't contains JavaScript</p>
+          <p class="card-text">This one is a Blog of coffee with a mobile first design too, this also does not contain JavaScript</p>
           <a href="https://vermillion-kitsune-27744e.netlify.app/" target="_blank" class="btn btn-dark" rel="noopener noreferrer">See Project</a>
       </div>
       </div>
@@ -112,7 +116,7 @@
         <img src="./images/cursos-GDLW.png" class="card-img-top" alt="Cursos de programación">
         <div class="card-body">
           <h5 class="card-title">Project 3</h5>
-          <p class="card-text">This is about a conference, this one don't have mobile first design and don't contains JavaScript neither</p>
+          <p class="card-text">This is about a conference, this one don't have mobile first design and does not contain JavaScript neither</p>
           <a href="https://vermillion-kitsune-27744e.netlify.app/" target="_blank" class="btn btn-dark" rel="noopener noreferrer">See Project</a>
         </div>
       </div>
@@ -132,7 +136,7 @@
   
     <label>E-mail</label>
     <input type="email" class="email" name="email" placeholder="E-mail" required>
-    <span class="error"></span>
+    <span class="error-email"></span>
 
 
 
@@ -141,7 +145,7 @@
     
 
     <div class="d-grid gap-2 d-md-block">
-      <button class="btn btn-dark" type="button" id="button" name="button">Send</button>
+      <button class="btn btn-dark" type="submit"  id="button" name="button">Send</button>
     </div>
 </form>
 </div>
