--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div>
 
 
-<h2 id="skills">Skills</h2> <!--Proyectos pendientes-->
+<!--<h2 id="skills">Skills</h2> Proyectos pendientes
 <div class="row row-cols-1 row-cols-md-2 g-2">
     <div class="col">
       <div class="card text-bg-dark">
@@ -86,6 +86,48 @@
         </div>
       </div>
     </div>
+</div>-->
+
+<div class="card-group">
+  <div class="card">
+    <div class="iconos">
+        <i class="fa-brands fa-js"></i>
+        <i class="fa-brands fa-python"></i>
+        </div>
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+  <div class="card">
+    <div class="iconos">
+        <i class="fa-brands fa-node-js"></i>
+        </div>
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+  <div class="card">
+      <div class="iconos">
+        <i class="fa-brands fa-html5"></i>
+        <i class="fa-brands fa-css3-alt"></i>
+        <i class="fa-brands fa-bootstrap"></i>
+        </div>
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
 </div>
 
 <h2>Projects</h2>
