the cards of the skills change

--- a/index.html
+++ b/index.html
@@ -51,55 +51,16 @@
 </div>
 
 
-<!--<h2 id="skills">Skills</h2> Proyectos pendientes
-<div class="row row-cols-1 row-cols-md-2 g-2">
-    <div class="col">
-      <div class="card text-bg-dark">
-        <div class="iconos">
-        <i class="fa-brands fa-js"></i>
-        <i class="fa-brands fa-python"></i>
-        </div>
-        <div class="card-body text-center">
-          <h5 class="card-title">Programming Languages</h5>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-       <div class="iconos">
-        <i class="fa-brands fa-node-js"></i>
-       </div>
-        <div class="card-body text-center">
-          <h5 class="card-title">Back-End</h5>
-        </div>
-    </div>
-    </div>
-    <div class="col col-md-12 g-12 ">
-      <div class="card text-bg-dark">
-        <div class="iconos">
-        <i class="fa-brands fa-html5"></i>
-        <i class="fa-brands fa-css3-alt"></i>
-        <i class="fa-brands fa-bootstrap"></i>
-        </div>
-        <div class="card-body text-center">
-          <h5 class="card-title">Front-End</h5>
-        </div>
-      </div>
-    </div>
-</div>-->
 
-<div class="card-group">
+
+<div class="card-group"> <!--Proyectos pendientes-->
   <div class="card">
     <div class="iconos">
         <i class="fa-brands fa-js"></i>
         <i class="fa-brands fa-python"></i>
         </div>
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
+      <h5 class="card-title center">Programming Languages</h5>
     </div>
   </div>
   <div class="card">
@@ -107,11 +68,7 @@
         <i class="fa-brands fa-node-js"></i>
         </div>
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
+      <h5 class="card-title center">Back-End</h5>
     </div>
   </div>
   <div class="card">
@@ -121,11 +78,7 @@
         <i class="fa-brands fa-bootstrap"></i>
         </div>
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
+      <h5 class="card-title center">Front-End</h5>
     </div>
   </div>
 </div>
