I added something I forgot

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
 
-
+<h2 id="skills">Skills</h2>
 <div class="card-group"> <!--Proyectos pendientes-->
   <div class="card">
     <div class="iconos">
