--- a/index.html
+++ b/index.html
@@ -53,71 +53,85 @@
 
 
 <h2 id="skills">Skills</h2>
-<div class="card-group"> <!--Proyectos pendientes-->
-  <div class="card">
-    <div class="iconos">
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col">
+    <div class="card border-dark">
+      <div class="iconos">
         <i class="fa-brands fa-js"></i>
         <i class="fa-brands fa-python"></i>
         </div>
-    <div class="card-body">
-      <h5 class="card-title center">Programming Languages</h5>
+      <div class="card-body">
+        <h5 class="card-title">Programming Languages</h5>
+      </div>
     </div>
   </div>
-  <div class="card">
-    <div class="iconos">
+  <div class="col">
+    <div class="card border-dark">
+      <div class="iconos">
         <i class="fa-brands fa-node-js"></i>
         </div>
-    <div class="card-body">
-      <h5 class="card-title center">Back-End</h5>
+      <div class="card-body">
+        <h5 class="card-title center">Back-End</h5>
+      </div>
     </div>
   </div>
-  <div class="card">
+  <div class="col">
+    <div class="card border-dark">
+      <div class="iconos">
+        <i class="fa-brands fa-bootstrap"></i>
+        </div>
+      <div class="card-body">
+        <h5 class="card-title">Frameworks</h5>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card border-dark">
       <div class="iconos">
         <i class="fa-brands fa-html5"></i>
         <i class="fa-brands fa-css3-alt"></i>
-        <i class="fa-brands fa-bootstrap"></i>
-        </div>
-    <div class="card-body">
-      <h5 class="card-title center">Front-End</h5>
+          </div>
+      <div class="card-body">
+        <h5 class="card-title">Front-End</h5>
+      </div>
     </div>
   </div>
 </div>
 
 <h2>Projects</h2>
 <div id="projects">
-  <div>
-    <p>Here are some projects that i did but no one contains JavaScript code</p>
-    <p>You can check my resume <span></span> <a class="resume" href="https://docs.google.com/document/d/1jKU51x-4Zenh65y6xZ1ZMCTIO1ffLIF1/edit?usp=sharing&ouid=103953328832651350323&rtpof=true&sd=true">Here</a></p> 
-  </div>
-  <section class="proyectos py-4">
-    <div class="card-group">
-      <div class="card">
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100 border-dark">
         <img src="/images/bienes-raices.png" class="card-img-top" alt="Bienes raices">
         <div class="card-body">
-        <h5 class="card-title">Project 1</h5>
-        <p class="card-text">This is a page about Buying and selling real estate with a mobile first design, this does not contain JavaScript</p>
-        <a target="_blank" href="https://stellular-cannoli-c58adb.netlify.app/" class="btn btn-dark" rel="noopener noreferrer">See Project</a>
+          <h5 class="card-title">Bienes Raices</h5>
+          <p class="card-text">This is a page about buying and selling real estate.</p>
+  <a target="_blank" href="https://stellular-cannoli-c58adb.netlify.app/" class="btn btn-dark" rel="noopener noreferrer">See Project</a>
+        </div>
       </div>
+    </div>
+    <div class="col">
+      <div class="card h-100 border-dark">
+        <img src="/images/Blog-cafe.png" class="card-img-top" alt="Blog de café">
+        <div class="card-body">
+          <h5 class="card-title">Blog de café</h5>
+          <p class="card-text">This one is a Blog of coffee.</p>
+    <a href="https://jolly-beignet-baf9ce.netlify.app/" target="_blank" class="btn btn-dark" rel="noopener noreferrer">See Project</a>
+        </div>
       </div>
-      <div class="card">
-      <img src="/images/Blog-cafe.png" class="card-img-top" alt="Blog de café">
-      <div class="card-body">
-        <h5 class="card-title">Project 2</h5>
-          <p class="card-text">This one is a Blog of coffee with a mobile first design too, this also does not contain JavaScript</p>
-          <a href="https://vermillion-kitsune-27744e.netlify.app/" target="_blank" class="btn btn-dark" rel="noopener noreferrer">See Project</a>
-      </div>
-      </div>
-      <div class="card">
+    </div>
+    <div class="col">
+      <div class="card h-100 border-dark">
         <img src="./images/cursos-GDLW.png" class="card-img-top" alt="Cursos de programación">
         <div class="card-body">
-          <h5 class="card-title">Project 3</h5>
-          <p class="card-text">This is about a conference, this one don't have mobile first design and does not contain JavaScript neither</p>
+          <h5 class="card-title">GDLWEBCAM</h5>
+          <p class="card-text">This is about a programming conference.</p>
           <a href="https://vermillion-kitsune-27744e.netlify.app/" target="_blank" class="btn btn-dark" rel="noopener noreferrer">See Project</a>
         </div>
       </div>
     </div>
-  </section>
-</div>
+  </div>
 
 
 <!--formulario-->
