adding some box-shadows

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
   </div>
   <div class="col">
-    <div class="card border-dark">
+    <div class="card border-dark ">
       <div class="iconos">
         <i class="fa-brands fa-bootstrap"></i>
         </div>
@@ -98,40 +98,46 @@
   </div>
 </div>
 
+
 <h2>Projects</h2>
 <div id="projects">
-  <div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col">
-      <div class="card h-100 border-dark">
-        <img src="/images/bienes-raices.png" class="card-img-top" alt="Bienes raices">
-        <div class="card-body">
-          <h5 class="card-title">Bienes Raices</h5>
-          <p class="card-text">This is a page about buying and selling real estate.</p>
-  <a target="_blank" href="https://stellular-cannoli-c58adb.netlify.app/" class="btn btn-dark" rel="noopener noreferrer">See Project</a>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100 border-dark">
-        <img src="/images/Blog-cafe.png" class="card-img-top" alt="Blog de café">
-        <div class="card-body">
-          <h5 class="card-title">Blog de café</h5>
-          <p class="card-text">This one is a Blog of coffee.</p>
-    <a href="https://jolly-beignet-baf9ce.netlify.app/" target="_blank" class="btn btn-dark" rel="noopener noreferrer">See Project</a>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100 border-dark">
-        <img src="./images/cursos-GDLW.png" class="card-img-top" alt="Cursos de programación">
-        <div class="card-body">
-          <h5 class="card-title">GDLWEBCAM</h5>
-          <p class="card-text">This is about a programming conference.</p>
-          <a href="https://vermillion-kitsune-27744e.netlify.app/" target="_blank" class="btn btn-dark" rel="noopener noreferrer">See Project</a>
-        </div>
-      </div>
-    </div>
+  <div>
+    <p>Here are some projects that i did but no one contains JavaScript code and are a mobile first design</p>
+    <p>You can check my resume <a class="resume" href="https://docs.google.com/document/d/1jKU51x-4Zenh65y6xZ1ZMCTIO1ffLIF1/edit?usp=sharing&ouid=103953328832651350323&rtpof=true&sd=true">Here</a></p> 
   </div>
+  <section class="proyectos py-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100 border-dark">
+          <img src="/images/bienes-raices.png" class="card-img-top" alt="Bienes raices">
+          <div class="card-body">
+            <h5 class="card-title">Bienes Raices</h5>
+            <p class="card-text">This is a page about buying and selling real estate.</p>
+    <a target="_blank" href="https://stellular-cannoli-c58adb.netlify.app/" class="mt-2 btn btn-dark" rel="noopener noreferrer">See Project</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 border-dark">
+          <img src="/images/Blog-cafe.png" class="card-img-top" alt="Blog de café">
+          <div class="card-body">
+            <h5 class="card-title center">Blog de café</h5>
+            <p class="card-text">This one is a Blog of coffee.</p>
+      <a href="https://jolly-beignet-baf9ce.netlify.app/" target="_blank" class="mt-4 btn btn-dark" rel="noopener noreferrer">See Project</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 border-dark">
+          <img src="./images/cursos-GDLW.png" class="card-img-top" alt="Cursos de programación">
+          <div class="card-body">
+            <h5 class="card-title ">GDLWEBCAM</h5>
+            <p class="card-text center">This is about a programming conference.</p> 
+            <a href="https://vermillion-kitsune-27744e.netlify.app/" target="_blank" class="mt-2 btn btn-dark" rel="noopener noreferrer">See Project</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 <!--formulario-->
