--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-movil" aria-controls="menu-movil" aria-expanded="false" aria-label="Desplegar menú de navegación"><span class="navbar-toggler-icon"></span></button>
         
-            <div class="collapse navbar-collapse menu">
+            <div class="collapse navbar-collapse menu" id="menu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a href="/" class="nav-link active">Home</a></li>
                     <li class="nav-item"><a href="#aboutme" class="nav-link">About me</a></li>
