rewriting the p in the project section

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 <div class="content-project" id="projects">
   <div>
-    <p>Here are some projects that i did, all are a mobile first design</p>
+    <p>Here are some projects that i did, all of them are a mobile first design</p>
     <p>You can check my resume <a class="resume" href="https://docs.google.com/document/d/1jKU51x-4Zenh65y6xZ1ZMCTIO1ffLIF1/edit?usp=sharing&ouid=103953328832651350323&rtpof=true&sd=true">Here</a></p> 
   </div>
 </div>
