rewrite some words i forgot

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <div class="pt-5 contenedor" id="aboutme">
     <div class="aboutme">
 <h1>Who am i?</h1>
-<p class="text">Hello, i'm Miguel Colmenarez.</p>
-<p class="text">I'm a system engineering student, i'm 19 years old, i'm a 
+<p class="text">Hello, I'm Miguel Colmenarez.</p>
+<p class="text">I'm a system engineering student, I'm 19 years old, i'm a 
   junior programmer</p>
 </div>
 
@@ -129,7 +129,7 @@
 
 <div class="content-project" id="projects">
   <div>
-    <p>Here are some projects that i did, all of them are a mobile first design</p>
+    <p>Here are some projects that I did, all of them are a mobile first design</p>
     <p>You can check my resume <a class="resume" href="https://docs.google.com/document/d/1jKU51x-4Zenh65y6xZ1ZMCTIO1ffLIF1/edit?usp=sharing&ouid=103953328832651350323&rtpof=true&sd=true">Here</a></p> 
   </div>
 </div>
