make just one class for the skills cards

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <h2 id="skills">Skills</h2>
 <div class="row row-cols-1 row-cols-md-2 g-4">
   <div class="col">
-    <div class="container-long">
+    <div class="container-card">
     <div class="card bg-dark">
       <h5 class="card-title center">Programming Languages</h5>
       <div class="icons">
@@ -71,7 +71,7 @@
   </div>
 
   <div class="col">
-    <div class="container-short">
+    <div class="container-card">
     <div class="card bg-dark">
       <h5 class="card-title center">Back-End</h5>
       <div class="icons single">
@@ -85,7 +85,7 @@
   </div> 
 
   <div class="col">
-    <div class="container-frameworks">
+    <div class="container-card">
     <div class="card bg-dark">
       <h5 class="card-title center">Frameworks</h5>
       <div class="icons">
@@ -99,7 +99,7 @@
   </div>
 
   <div class="col">
-    <div class="container-long_front">
+    <div class="container-card">
     <div class="card bg-dark card-front">
       <h5 class="card-title center">Front-end</h5>
       <div class="icons">
@@ -124,13 +124,15 @@
 <p class="content-programming">I started programming mainly out of curiosity. I wanted to know how apps were made or how pages were made, so I made a research, and I found some videos on how to program a page. My cousin, who is a Senior Programmer in an startup company in Uruguay, helped me out and recommended me to learn Python because it's the easiest language to learn. Then I went on learning HTML5, CSS3 and JavaScript. Now I am curious about servers and NodeJs</p>
 </section>
 
+
+
 <div class="project-title">
 <h2 class="title">Projects</h2>
 
 <div class="content-project" id="projects">
   <div>
     <p>Here are some projects that I did, all of them are a mobile first design</p>
-    <p>You can check my resume <a class="resume" href="https://docs.google.com/document/d/1jKU51x-4Zenh65y6xZ1ZMCTIO1ffLIF1/edit?usp=sharing&ouid=103953328832651350323&rtpof=true&sd=true">Here</a></p> 
+    <p>You can check my <a class="resume" href="file:///C:/Users/I5%209400/Downloads/Miguel%20colmenarez.docx.pdf">resume</a></p> 
   </div>
 </div>
   <section class="proyectos py-4 project-card">
