react was added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 <div class="content">
-<div class="pt-5 contenedor" id="aboutme">
+<div class="pt-5 container-aboutme" id="aboutme">
     <div class="aboutme">
 <h1>Who am i?</h1>
 <p class="text">Hello, I'm Miguel Colmenarez.</p>
@@ -90,9 +90,13 @@
       <h5 class="card-title center">Frameworks</h5>
       <div class="icons">
         <i class="fa-brands fa-bootstrap"></i>
+        <i class="fa-brands fa-react" style="color: #ffffff;"></i>
         </div>
       <div class="card-body">
+        <div class="lang-name">
         <p>Bootstrap</p>
+        <p>React</p>
+      </div>
       </div>
     </div>
   </div>
